// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initCONFIGS should fail with non-existing file 1`] = `
{
  "errorCode": "E_NO_CONFIG",
  "errorParams": [
    "/home/whoami/my-whook-project/src/config/development/config.js",
  ],
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/config/development/config.js",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🏭 - Initializing the CONFIGS service.",
    ],
    [
      "warning",
      "⚡ - Loading configurations from "/home/whoami/my-whook-project/src/config/development/config.js".",
    ],
    [
      "warning",
      "☢ - Could not load configuration file "/home/whoami/my-whook-project/src/config/development/config.js".",
    ],
  ],
}
`;

exports[`initCONFIGS should work with existing configs 1`] = `
{
  "CONFIGS": {
    "CONFIG": {
      "testConfig": "test",
    },
  },
  "importerCalls": [
    [
      "/home/whoami/my-whook-project/src/config/development/config.js",
    ],
  ],
  "logCalls": [
    [
      "debug",
      "🏭 - Initializing the CONFIGS service.",
    ],
    [
      "warning",
      "⚡ - Loading configurations from "/home/whoami/my-whook-project/src/config/development/config.js".",
    ],
  ],
}
`;
